--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,33 @@
   <name>project0</name>
   <description>Banking Application</description>
   
-  <properties>
+  	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
   
+  <!--  https://mvnrepository.com/artifact/postgresql/postgresql -->
+  <dependencies>
+  	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
+<!-- https://mvnrepository.com/artifact/junit/junit -->
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.13.2</version>
+	    <scope>test</scope>
+	</dependency>
+  		<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+	<dependency>
+    	<groupId>postgresql</groupId>
+    	<artifactId>postgresql</artifactId>
+    	<version>9.1-901.jdbc4</version>
+	</dependency>
+  		
+  		
+  </dependencies>
 </project>
